--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </h1>
       <hr class="negativeMarginsFTW">
       <div class="w3-xxxlarge w3-center w3-animate-bottom">
-        <a href="./cv.pdf" target="_blank"><i class="fas fa-file-pdf"></i></a>
+        <a href="./cvSpitzer.pdf" target="_blank"><i class="fas fa-file-pdf"></i></a>
         <a href="mailto:spit5921@comcast.net?subject=Your%20Website"><i class="fas fa-at"></i></a>
         <a href="https://github.com/sp1tz" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://steamcommunity.com/id/darth_spitz" target="_blank"><i class="fab fa-steam"></i></a>
