Update title & center.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
     <div class="w3-display-middle">
-      <h1 class="w3-jumbo w3-animate-top">
-        <a href="https://www.cics.umass.edu/" target="_blank">Grad Student</a>
+      <h1 class="w3-jumbo w3-center w3-animate-top">
+        <a href="https://www.cics.umass.edu/" target="_blank">M.S. Graduate</a>
       </h1>
       <hr class="negativeMarginsFTW">
       <div class="w3-xxxlarge w3-center w3-animate-bottom">
