--- a/index.html
+++ b/index.html
@@ -4,25 +4,27 @@
     <title>Joseph Michael Spitzer</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="https://unpkg.com/@tabler/icons@latest/iconfont/tabler-icons.min.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" crossorigin="anonymous"
-      integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/">
-    <link rel="icon" href="./favicon.png">
-    <link rel="stylesheet" href="./localStyles.css">
+    <link rel="stylesheet" href="localStyles.css">
   </head>
-  <body>
-    <div class="w3-display-middle">
-      <h1 class="w3-jumbo w3-center w3-animate-top">
-        <a href="https://www.cics.umass.edu/" target="_blank">M.S. Graduate</a>
-      </h1>
-      <hr class="negativeMarginsFTW">
-      <div class="w3-xxxlarge w3-center w3-animate-bottom">
-        <a href="./cvSpitzer.pdf" target="_blank"><i class="fas fa-file-pdf"></i></a>
-        <a href="mailto:spit5921@comcast.net?subject=Your%20Website"><i class="fas fa-at"></i></a>
-        <a href="https://github.com/sp1tz" target="_blank"><i class="fab fa-github"></i></a>
-        <a href="https://steamcommunity.com/id/darth_spitz" target="_blank"><i class="fab fa-steam"></i></a>
-        <a href="https://youtu.be/dQw4w9WgXcQ"><i class="fab fa-youtube"></i></a>
-      </div>
+  <body class="w3-display-middle w3-center">
+    <h1 class="w3-xxxlarge w3-animate-top">
+      <a href="https://www.cics.umass.edu" target="_blank">M.S. Graduate</a>
+    </h1>
+    <hr class="negativeMarginsFTW">
+    <div class="w3-xlarge">
+      <a href="cvSpitzer.pdf" class="w3-animate-left" target="_blank">CV</a>
+      |
+      <a href="rèsumèSpitzer.pdf" class="w3-animate-right" target="_blank">Rèsumè</a>
+    </div>
+    <hr>
+    <div class="w3-xxlarge w3-animate-bottom">
+      <a href="mailto:spit5921@comcast.net?subject=Your%20Website"><i class="ti ti-at"></i></a>
+      <a href="https://linkedin.com/in/josephmichaelspitzer" target="_blank"><i class="ti ti-brand-linkedin"></i></a>
+      <a href="https://github.com/sp1tz" target="_blank"><i class="ti ti-brand-github"></i></a>
+      <a href="https://steamcommunity.com/id/darth_spitz" target="_blank"><i class="ti ti-brand-steam"></i></a>
+      <a href="https://youtu.be/dQw4w9WgXcQ"><i class="ti ti-brand-youtube"></i></a>
     </div>
   </body>
 </html>
