--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body class="w3-display-middle w3-center">
     <h1 class="w3-xxxlarge w3-animate-top">
-      <a href="https://www.cics.umass.edu" target="_blank">M.S. Graduate</a>
+      <a href="https://www.ibm.com" target="_blank">Staff Engineer</a>
     </h1>
     <hr class="negativeMarginsFTW">
     <div class="w3-xlarge">
