index.html: Tweak job; e-mail subject.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body class="w3-display-middle w3-center">
     <h1 class="w3-xxxlarge w3-animate-top">
-      <a href="https://www.ibm.com" target="_blank">Staff Engineer</a>
+      <a href="https://www.ibm.com" target="_blank">Software Engineer</a>
     </h1>
     <hr class="negativeMarginsFTW">
     <div class="w3-xlarge">
@@ -20,7 +20,7 @@
     </div>
     <hr>
     <div class="w3-xxlarge w3-animate-bottom">
-      <a href="mailto:spit5921@comcast.net?subject=Your%20Website"><i class="ti ti-at"></i></a>
+      <a href="mailto:spit5921@comcast.net?subject=Yo"><i class="ti ti-at"></i></a>
       <a href="https://linkedin.com/in/josephmichaelspitzer" target="_blank"><i class="ti ti-brand-linkedin"></i></a>
       <a href="https://github.com/sp1tz" target="_blank"><i class="ti ti-brand-github"></i></a>
       <a href="https://steamcommunity.com/id/darth_spitz" target="_blank"><i class="ti ti-brand-steam"></i></a>
