--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Joseph Michael Spitzer</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="https://unpkg.com/@tabler/icons@latest/iconfont/tabler-icons.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/@tabler/icons@1/iconfont/tabler-icons.min.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="localStyles.css">
   </head>
